--- a/index.html
+++ b/index.html
@@ -44,10 +44,20 @@
         <div class="contact-text">
           <ul class="text list">
             <li class="contact-list">
-              <a href="mailto:info@devstudio.com" class="link text-mail">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="link text-mail">
+                <svg class="icon-mail-one" width="16" height="12">
+                  <use href="./images/icons.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="contact-list">
-              <a href="tel:+380961111111" class="link text-tel">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="link text-tel"
+                ><svg class="icon-tel-one" width="16" height="12">
+                  <use href="./images/icons.svg#icon-tel"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </div>
@@ -67,6 +77,11 @@
 
       <section class="section-info">
         <div class="container container-info">
+          <ul>
+            <li>
+              <a href="icon-list-svg"></a>
+            </li>
+          </ul>
           <h2 class="visually-hidden">Future</h2>
           <ul class="list-info list">
             <li class="item">
