--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </li>
             <li class="contact-list">
               <a href="tel:+380961111111" class="link text-tel"
-                ><svg class="icon-tel-one" width="16" height="12">
+                ><svg class="icon-tel-one" width="10" height="16">
                   <use href="./images/icons.svg#icon-tel"></use>
                 </svg>
                 +38 096 111 11 11
@@ -77,14 +77,14 @@
 
       <section class="section-info">
         <div class="container container-info">
-          <ul>
-            <li>
-              <a href="icon-list-svg"></a>
-            </li>
-          </ul>
           <h2 class="visually-hidden">Future</h2>
           <ul class="list-info list">
             <li class="item">
+              <div class="adventages-top">
+                <svg class="" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="item-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="item-info">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
