--- a/index.html
+++ b/index.html
@@ -81,26 +81,35 @@
           <ul class="list-info list">
             <li class="item">
               <div class="adventages-top">
-                <svg class="" width="70" height="70">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                <svg class="" width="65" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="item-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="item-info">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="item">
+              <div class="adventages-top">
+                <svg class="" width="65" height="70"><use href="./images/icons.svg#icon-clock"></use></svg>
+              </div>
               <h3 class="item-text">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="item-info">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="item">
+              <div class="adventages-top">
+                <svg class="" width="65" height="70"><use href="./images/icons.svg#icon-diagram"></use></svg>
+              </div>
               <h3 class="item-text">ПЛАНИРОВАНИЕ</h3>
               <p class="item-info">
                 Равным образом консультация с широким активом в значительной степени обуславливает..
               </p>
             </li>
             <li class="item">
+              <div class="adventages-top">
+                <svg class="" width="65" height="70"><use href="./images/icons.svg#icon-astronaut"></use></svg>
+              </div>
               <h3 class="item-text">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="item-info">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
