--- a/index.html
+++ b/index.html
@@ -147,6 +147,36 @@
               <div class="item-text-box">
                 <h3 class="team-caption">Игорь Демьяненко</h3>
                 <p class="info-team" lang="en">Product Designer</p>
+                <ul class="icon-list-section list">
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin">\</use>
+                      </svg></a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -155,6 +185,36 @@
               <div class="item-text-box">
                 <h3 class="team-caption">Ольга Репина</h3>
                 <p class="info-team" lang="en">Frontend Developer</p>
+                <ul class="icon-list-section list">
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin">\</use>
+                      </svg></a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -163,6 +223,36 @@
               <div class="item-text-box">
                 <h3 class="team-caption">Николай Тарасов</h3>
                 <p class="info-team" lang="en">Marketing</p>
+                <ul class="icon-list-section list">
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin">\</use>
+                      </svg></a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -171,6 +261,36 @@
               <div class="item-text-box">
                 <h3 class="team-caption">Михаил Ермаков</h3>
                 <p class="info-team" lang="en">UI Designer</p>
+                <ul class="icon-list-section list">
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook">\</use>
+                      </svg></a
+                    >
+                  </li>
+                  <li class="icon-list-team">
+                    <a href="" class="icon-list"
+                      ><svg class="" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin">\</use>
+                      </svg></a
+                    >
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
