--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram">\</use>
-                      </svg></a
-                    >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
@@ -297,6 +297,41 @@
         </div>
       </section>
     </main>
+
+    <!--Наши клиенты-->
+    <section class="section-clients">
+      <div class="container container-clients">
+        <h2 class="heading-clients">Постоянные клиенты</h2>
+        <!-- <div class="container-clients-icon"> -->
+        <ul class="clients-list list">
+          <li class="clients-list-text">
+            <a href="" class="clients-icon"
+              ><svg class="" width="106" height="60">
+                <use href="./images/icons.svg#icon-yaco"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <ul class="clients-list list">
+          <li class="clients-list-text">
+            <a href="" class="clients-icon"
+              ><svg class="" width="106" height="60">
+                <use href="./images/icons.svg#icon-yaco"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <ul class="clients-list list">
+          <li class="clients-list-text">
+            <a href="" class="clients-icon"
+              ><svg class="" width="106" height="60">
+                <use href="./images/icons.svg#icon-yaco"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <!--Футер-->
 
