--- a/index.html
+++ b/index.html
@@ -157,21 +157,21 @@
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter">\</use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook">\</use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin">\</use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a
                     >
                   </li>
@@ -188,28 +188,28 @@
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram">\</use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter">\</use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook">\</use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin">\</use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a
                     >
                   </li>
@@ -226,28 +226,28 @@
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram">\</use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter">\</use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook">\</use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
                       ><svg class="" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin">\</use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a
                     >
                   </li>
