--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a
                     >
@@ -194,21 +194,21 @@
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a
                     >
@@ -225,28 +225,28 @@
                 <ul class="icon-list-section list">
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a
                     >
@@ -263,28 +263,28 @@
                 <ul class="icon-list-section list">
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></a
                     >
                   </li>
                   <li class="icon-list-team">
                     <a href="" class="icon-list"
-                      ><svg class="" width="20" height="20">
+                      ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></a
                     >
