--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <p class="info-team" lang="en">Product Designer</p>
                 <ul class="icon-list-section list">
                   <li class="icon-list-team">
-                    <a href="" class="icon-list"
+                    <a href="" class="icon-list icon-list-icon"
                       ><svg class="team-svg" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
