--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,20 @@
         <div class="contact-text">
           <ul class="text list">
             <li class="contact-list">
-              <a href="mailto:info@devstudio.com" class="link contact-text-list">info@devstudio.com </a>
+              <a href="mailto:info@devstudio.com" class="link text-mail">
+                <svg class="icon-mail-one" width="16" height="12">
+                  <use href="./images/icons.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="contact-list">
-              <a href="tel:+380961111111" class="link contact-text-list">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="link text-tel"
+                ><svg class="icon-tel-one" width="10" height="16">
+                  <use href="./images/icons.svg#icon-tel"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </div>
@@ -148,15 +158,50 @@
     <!--Футер-->
 
     <footer class="footer-list">
-      <div class="container footer-container">
-        <a href="" class="logo-footer link"> Web<span class="logo-back">Studio</span></a>
-        <address class="footer-info-item">
-          <ul class="footer-info list">
-            <li class="list-address"><a href="" class="address-footer link">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="list-mail"><a href="" class="mail-footer link">info@devstudio.com</a></li>
-            <li class="list-tel"><a href="tel:+380961111111" class="tel-footer link">+38 096 111 11 11</a></li>
+      <div class="container footer-flex">
+        <div class="footer-container">
+          <a href="" class="logo-footer link"> Web<span class="logo-back">Studio</span></a>
+          <address class="footer-info-item">
+            <ul class="footer-info list">
+              <li class="list-address"><a href="" class="address-footer link">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li class="list-mail"><a href="" class="mail-footer link">info@devstudio.com</a></li>
+              <li class="list-tel"><a href="tel:+380961111111" class="tel-footer link">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="icon-footer">
+          <h3 class="heading-footer">Присоединяйтесь</h3>
+          <ul class="footer-icon-list list">
+            <li class="footer-icon-item">
+              <a class="footer-icon-bg" href="">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-bg footer-svg-icon" href="">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-bg" href="">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-bg" href="">
+                <svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
