--- a/index.html
+++ b/index.html
@@ -305,42 +305,42 @@
          <ul class="clients-list list">
           <li class="clients-list-text"> 
             <a href="" class="clients-icon"
-              ><svg class="" width="106" height="60">
+              ><svg class="svg-clients" width="106" height="60">
                 <use href="./images/icons.svg#icon-yaco"></use>
               </svg>
             </a>
            </li>
            <li class="clients-list-text"> 
-            <a href="" class="clients-icon"
-              ><svg class="" width="106" height="60">
+            <a href="" class="clients-icon  "
+              ><svg class="svg-clients" width="106" height="60">
                 <use href="./images/icons.svg#icon-tagline"></use>
               </svg>
             </a>
            </li>
            <li class="clients-list-text"> 
             <a href="" class="clients-icon"
-              ><svg class="" width="106" height="60">
+              ><svg class="svg-clients" width="106" height="60">
                 <use href="./images/icons.svg#icon-company"></use>
               </svg>
             </a>
            </li>
            <li class="clients-list-text"> 
-            <a href="" class="clients-icon"
-              ><svg class="" width="106" height="60">
+            <a href="" class="clients-icon clients-icon-logo"
+              ><svg class="svg-clients" width="106" height="60">
                 <use href="./images/icons.svg#icon-foster"></use>
               </svg>
             </a>
            </li>
            <li class="clients-list-text"> 
             <a href="" class="clients-icon"
-              ><svg class="" width="106" height="60">
+              ><svg class="svg-clients" width="106" height="60">
                 <use href="./images/icons.svg#icon-brand"></use>
               </svg>
             </a>
            </li>
            <li class="clients-list-text"> 
             <a href="" class="clients-icon"
-              ><svg class="" width="106" height="60">
+              ><svg class="svg-clients" width="106" height="60">
                 <use href="./images/icons.svg#icon-taglinecompany"></use>
               </svg>
             </a>
