--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         </address>
       </div>
       <div class="icon-footer">
-        <h3 class="heading-footer" >Присоединяйтесь</h3>
+        <p class="heading-footer" >Присоединяйтесь</p>
         <ul class="footer-icon-list list">
           <li class="footer-icon-item">
             <a class="footer-icon-bg" href="">
